fix: shorten class name for readability

--- a/landing-page.css
+++ b/landing-page.css
@@ -64,7 +64,7 @@ footer {
 .footer-copy strong, .logo-sm{
     font-size: 1.5rem;
 }
-.logo-xsm {
+.logo-xs {
     font-size: 1rem;
 }
 .grid-50-50-layout{
